# Rusjango

./: .gitattributes  .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  PROGRESS.md  README.md  pyproject.toml
.github/workflows/: ci.yml  release.yml
cli/: Cargo.toml
cli/src/: add.rs  dev.rs  main.rs  new.rs  orm.rs  project.rs  remove.rs  settings.rs
crates/rusjango-core/: Cargo.toml
crates/rusjango-core/src/: lib.rs  router.rs
docs/: 00-overview.md  01-architecture.md  02-getting-started.md  03-cli-reference.md  04-api-design.md  05-orm-guide.md  06-settings-reference.md  07-middleware.md  08-schema-validation.md  09-progress.md  10-contributing.md
docs/internals/: orm-internals.md  python-layer.md  rust-core.md
examples/: README.md  dev.ps1
examples/hello/: main.py  pyproject.toml  settings.py
examples/hello/apps/: __init__.py
examples/hello/apps/school/: __init__.py  api.py  schemas.py
python/rusjango/: README.md  pyproject.toml
python/rusjango/src/rusjango/: __init__.py  __main__.py  _core.pyi  _dev.py  _migrate.py  app.py  apps.py  asgi.py  cli.py  config.py  exceptions.py  middleware.py  router.py  routing.py  schema.py  security.py  server.py  settings.py
python/rusjango/src/rusjango/orm/: __init__.py  connection.py  fields.py  model.py  query.py  sql.py
python/rusjango/tests/: conftest.py  test_apps.py  test_asgi.py  test_config.py  test_import.py  test_orm.py
templates/app/: __init__.py.tpl  api.py.tpl
templates/orm/: models.py.tpl
templates/project/: main.py.tpl  pyproject.toml.tpl  settings.py.tpl
