[workspace]
members = ["crates/rusjango-core", "cli"]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"
authors = ["Rusjango Contributors"]

[workspace.dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }
pyo3 = { version = "0.23", features = ["extension-module", "abi3-py38"] }
pyo3-async-runtimes = { version = "0.23", features = ["tokio-runtime"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
