[package]
name = "rusjango-core"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
description = "Rust core for Rusjango: routing, HTTP, and middleware"

[lib]
name = "rusjango_core"
crate-type = ["cdylib", "rlib"]

[dependencies]
anyhow.workspace = true
pyo3.workspace = true
pyo3-async-runtimes.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tokio.workspace = true
tracing.workspace = true
