[build-system]
requires = ["maturin>=1.7,<2"]
build-backend = "maturin"

[project]
name = "rusjango"
version = "0.1.0"
description = "Rust-powered async Python web framework"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Rusjango Contributors" }]
keywords = ["web", "async", "framework", "api"]
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Framework :: AsyncIO",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Rust",
]
dependencies = [
    "uvicorn[standard]>=0.32",
    "aiosqlite>=0.20",
]

[project.optional-dependencies]
postgres = ["asyncpg>=0.29"]
dev = ["pytest>=8", "pytest-asyncio>=0.24"]

[project.scripts]
rusjango = "rusjango.__main__:main"

[tool.maturin]
manifest-path = "../../crates/rusjango-core/Cargo.toml"
module-name = "rusjango._core"
python-source = "src"
features = ["pyo3/extension-module"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
