[build-system]
requires = ["maturin>=1.7,<2"]
build-backend = "maturin"

[project]
name = "rusjango"
version = "0.1.3"
description = "Rust-powered async Python web framework — start minimal, grow with rusjango add"
readme = "README.md"
requires-python = ">=3.11"
license = { file = "LICENSE" }
authors = [{ name = "Rusjango Contributors" }]
keywords = [
    "web",
    "framework",
    "async",
    "api",
    "rust",
    "django",
    "fastapi",
    "orm",
    "asgi",
    "http",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Web Environment",
    "Framework :: AsyncIO",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Programming Language :: Rust",
    "Topic :: Internet :: WWW/HTTP :: HTTP Servers",
    "Topic :: Internet :: WWW/HTTP :: WSGI :: Application",
    "Topic :: Software Development :: Libraries :: Application Frameworks",
    "Typing :: Typed",
]
dependencies = [
    "uvicorn[standard]>=0.32",
    "aiosqlite>=0.20",
]

[project.optional-dependencies]
postgres = ["asyncpg>=0.29"]
dev = ["pytest>=8", "pytest-asyncio>=0.24"]

[project.urls]
Homepage     = "https://github.com/babar-xagi/Rusjango"
Repository   = "https://github.com/babar-xagi/Rusjango"
Documentation = "https://github.com/babar-xagi/Rusjango/tree/main/docs"
Changelog    = "https://github.com/babar-xagi/Rusjango/blob/main/CHANGELOG.md"
"Bug Tracker" = "https://github.com/babar-xagi/Rusjango/issues"

[project.scripts]
rusjango = "rusjango.__main__:main"

[tool.maturin]
manifest-path = "../../crates/rusjango-core/Cargo.toml"
module-name   = "rusjango._core"
python-source = "src"
features      = ["pyo3/extension-module"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
testpaths    = ["tests"]
